--- a/podcast/homepage.css
+++ b/podcast/homepage.css
@@ -52,3 +52,227 @@ nav{
     column-gap: 1em;
     background-color:#214f4b
 }
+
+@import url('https://fonts.googleapis.com/css?family=IM+Fell+French+Canon+SC|Lato');
+@font-face {
+    font-family: 'ethnocentricregular';
+    src: url('../fonts/ethnocentric_rg-webfont.woff2') format('woff2'),
+         url('../fonts/ethnocentric_rg-webfont.woff') format('woff');
+    font-weight: normal;
+    font-style: normal;
+}
+#content {
+    max-width: 1600px;
+    margin: 0 auto;
+}
+#hero-Sais {
+    width: 100%;
+}
+h1, h2, h3 {
+    font-family: 'ethnocentricregular';
+    color: white;
+}
+p {
+    font-family: Lato, Arial, Helvetica, sans-serif;
+    color: white;
+    line-height: 2em;
+}
+nav a:hover {
+    background-color: white;
+    color: #0f0f0f;
+}
+body {
+    background-color: #16C172;
+}
+#homelink {
+    color: white;
+}
+#contentlink {
+    color: white;
+}
+#siteplanlink {
+    color: white
+}
+#contactlink {
+    color: white;
+}
+.lokilink {
+    color: white;
+}
+.boomzlink {
+    color: white;
+}
+nav a {
+    font-family: 'ethnocentricregular';
+    text-align: center;
+    text-decoration: none;
+    padding: 35px;
+    color: white;
+}
+nav {
+    display: flex;
+    justify-content: space-around;
+    background-color: #2AFC98;
+    height: 15%;
+}
+.logo {
+    max-width: 89.5px;
+    /* height: 100%; */
+    display: table;
+    float: left;
+}
+h1, h2 {
+    text-align: center;
+    padding: 50px 0px 120px 0px;
+}
+#img_pohn {
+    width: 350px;
+    margin: 0 auto;
+    display: block;
+}
+#saisp {
+    text-align: center;
+    padding: 10px 100px 0 100px;
+    line-height: 2em;
+}
+footer {
+    margin-top: 200px;
+    padding: 25px 50px;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    background-color: #2AFC98; 
+}
+footer h3 {
+    color: white;
+    font-size: 75%;
+}
+footer a {
+    color: white;
+    text-decoration: none;
+}
+#discord {
+    width: 64px;
+    height: 64px;
+}
+li {
+    color: white;
+}
+/* The flip card container - set the width and height to whatever you want. We have added the border property to demonstrate that the flip itself goes out of the box on hover (remove perspective if you don't want the 3D effect */
+.flip-card {
+    margin: 0 auto;
+    background-color: transparent;
+    width: 500px;
+    height: 500px;
+    border: 1px solid #2DE1FC;
+    perspective: 1000px; /* Remove this if you don't want the 3D effect */
+  }
+  
+  /* This container is needed to position the front and back side */
+  .flip-card-inner {
+    position: relative;
+    width: 100%;
+    height: 100%;
+    text-align: center;
+    transition: transform 0.8s;
+    transform-style: preserve-3d;
+  }
+  
+  /* Do an horizontal flip when you move the mouse over the flip box container */
+  .flip-card:hover .flip-card-inner {
+    transform: rotateY(180deg);
+  }
+  
+  /* Position the front and back side */
+  .flip-card-front, .flip-card-back {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    -webkit-backface-visibility: hidden; /* Safari */
+    backface-visibility: hidden;
+  }
+  
+  /* Style the front side (fallback if image is missing) */
+  .flip-card-front {
+    background-color: #214F4B;
+    color: black;
+  }
+  
+  /* Style the back side */
+  .flip-card-back {
+    background-color: #214F4B;
+    color: white;
+    transform: rotateY(180deg);
+  }
+  .img {
+      width: 100%;
+      border-radius: 50%;
+      background-color: #0f0f0f;
+  }
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+.slider {
+    position: relative;
+    width: 200px;
+    height: 200px;
+    transform-style: preserve-3d;
+    animation: rotate 30s linear infinite;
+    margin: 0 auto;
+    padding-bottom: 150px;
+}
+@keyframes rotate {
+    0% {
+        transform: perspective(1000px) rotateY(0deg);
+    }
+
+    100% {
+        transform: perspective(1000px) rotateY(360deg);
+    }
+}
+
+.slider span {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    transform-origin: center;
+    transform-style: preserve-3d;
+    transform: rotateY(calc(var(--i)*45deg)) translateZ(350px);
+}
+.slider span img {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    border-radius: 100px;
+    object-fit: cover;
+    transition: 2s;
+}
+.slider span:hover img {
+    transform: translateY(-50px) scale(1.2);
+}
+input {
+    height: 40px;
+}
+button {
+    padding: 15px;
+}
+form ul {
+    text-align: center;
+}
+@media screen and (max-width: 900px) {
+    nav, footer {
+        flex-direction: column;
+    }
+    footer {
+        margin-top: 25px;
+    }
+    footer h3 {
+        padding: 5px;
+    }
+}
